@@ -5,11 +5,7 @@
 	<key>IBDocumentLocation</key>
 	<string>20 91 512 264 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
-	<string>283.0</string>
-	<key>IBOpenObjects</key>
-	<array>
-		<integer>145</integer>
-	</array>
+	<string>291.0</string>
 	<key>IBSystem Version</key>
 	<string>6L29</string>
 </dict>
